Fixing percentages for mobile.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
 
     <link rel="icon" type="image/png" href="/public/favicon.png">
+    <script src="https://kit.fontawesome.com/4df343ee45.js" crossorigin="anonymous"></script>
 
     <title>Time To Retirement Calculator</title>
 
@@ -14,6 +15,7 @@
 
     <body>
         <section id="app"></section>
+        <i class="fas fa-plus-square"></i>
         <script type="module">
             // https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
             import init from '/pkg/package.js';
