--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="icon" type="image/png" href="/public/favicon.png">
     <script src="https://kit.fontawesome.com/4df343ee45.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Time To Retirement Calculator</title>
 
