--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <meta name="description" content="">
 
     <link rel="icon" type="image/png" href="/public/favicon.png">
-    <script src="https://kit.fontawesome.com/4df343ee45.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+<!--    <script src="https://kit.fontawesome.com/4df343ee45.js" crossorigin="anonymous"></script>-->
+<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+<!--    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />-->
+<!--    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Time To Retirement Calculator</title>
@@ -15,7 +26,9 @@
     </head>
 
     <body>
-        <section id="app"></section>
+        <div class="container">
+            <section id="app"></section>
+        </div>
         <script type="module">
             // https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
             import init from '/pkg/package.js';
