--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <meta name="description" content="">
 
     <link rel="icon" type="image/png" href="/public/favicon.png">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
-<!--    <script src="https://kit.fontawesome.com/4df343ee45.js" crossorigin="anonymous"></script>-->
-<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
-<!--    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />-->
-<!--    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
